// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal demo renders backdrop demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default">true<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-default">false<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-default">static<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders basic demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default">Open<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders dynamic demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default">Open<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders full demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default">Open<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders loading demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default">Open<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders overflow demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default">Overflow = false<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-default">Overflow = true<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders size demo correctly 1`] = `
<div>
  <div role="toolbar" class="vs-btn-toolbar"><button type="button" class="vs-btn vs-btn-default vs-btn-xs">Xsmall<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-default vs-btn-sm">Small<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-default vs-btn-md">Medium<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-default vs-btn-lg">Large<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Modal demo renders visible demo correctly 1`] = `
<div>
  <div data-transfer="false" role="dialog" class="vs-modal-wrapper v-transfer-dom" style="">
    <div role="button" tabindex="-1" class="vs-modal-backdrop"></div>
    <div role="document" tabindex="-1" class="vs-modal vs-modal-sm" appear="true" type="animation" enteractiveclass="bounce-in" leaveactiveclass="bounce-out" style="padding-right: 0px; padding-left: 0px;">
      <div class="vs-modal-dialog">
        <div role="document" class="vs-modal-content">
          <div class="vs-modal-header"><button type="button" aria-label="Close" class="vs-modal-header-close"><span aria-hidden="true">×</span></button>
            <h4 class="vs-modal-title">Modal Title</h4>
          </div>
          <div class="vs-modal-body" style="overflow: auto; max-height: 0px;">
            <div class="vs-content-paragraph">
              <p class="vs-content-paragraph-p" style="width: 97%;"></p>
              <p class="vs-content-paragraph-p" style="width: 100%;"></p>
              <p class="vs-content-paragraph-p" style="width: 94%;"></p>
              <p class="vs-content-paragraph-p" style="width: 90%;"></p>
            </div>
          </div>
          <div class="vs-modal-footer"><button type="button" class="vs-btn vs-btn-subtle">Cancel<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button><button type="button" class="vs-btn vs-btn-primary">Ok<span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
